[gd_scene load_steps=5 format=2]

[ext_resource path="res://components/HUD/score_label.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/candies/candy002.png" type="Texture" id=2]
[ext_resource path="res://components/HUD/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/icons/settings.png" type="Texture" id=5]

[node name="HUD" type="Node2D"]
script = ExtResource( 4 )
score = 18

[node name="MainPanel" type="Panel" parent="."]
margin_left = 16.0
margin_top = 29.0
margin_right = 346.0
margin_bottom = 61.0

[node name="ScoreCandySprite" type="Sprite" parent="MainPanel"]
position = Vector2( 92, 16 )
scale = Vector2( 0.29, 0.27 )
texture = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="MainPanel"]
margin_left = 10.0
margin_top = 8.0
margin_right = 69.0
margin_bottom = 24.0
text = "0"
align = 2
valign = 1
script = ExtResource( 1 )

[node name="MonsterNumberLabel" type="Label" parent="MainPanel"]
margin_left = 127.0
margin_top = 8.0
margin_right = 196.0
margin_bottom = 24.0
text = "1/10"
align = 1
valign = 1
script = ExtResource( 1 )

[node name="HPLabel" type="Label" parent="MainPanel"]
margin_left = 199.0
margin_top = 8.0
margin_right = 275.0
margin_bottom = 24.0
text = "12hp"
align = 2
valign = 1
script = ExtResource( 1 )

[node name="SettingsButton" type="TextureButton" parent="MainPanel"]
margin_left = 292.0
margin_right = 322.0
margin_bottom = 31.0
texture_normal = ExtResource( 5 )
expand = true

[connection signal="pressed" from="MainPanel/SettingsButton" to="." method="_on_SettingsButton_pressed"]
